tests/should-fail/shadowing/param-and-local-effect-effect.j
type effect extends handle

function bla takes effect effect returns nothing
	local effect effect
endfunction
